--- a/app.css
+++ b/app.css
@@ -59,7 +59,7 @@ main::-webkit-scrollbar,
   width: 100%;
   height: 100%;
   inset: 0;
-  background: url(/media/loading.gif) center / 3rem no-repeat;
+  background: url(media/loading.gif) center / 3rem no-repeat;
   content: '';
 }
 
